updating landing page

--- a/src/app/(public)/(static)/features/page.mdx
+++ b/src/app/(public)/(static)/features/page.mdx
@@ -1,12 +1,12 @@
 # Features of markdowntailor
 
-markdowntailor is packed with powerful, modern features designed to give you a competitive edge in your job search. From AI-powered analysis to professional, one-click exports, every tool is built to help you create the perfect resume for any opportunity.
+markdowntailor is packed with powerful, modern features designed to help you create professional, ATS-optimized resumes. From AI-powered analysis to professional, one-click exports, every tool is built to help you showcase your skills and experience effectively.
 
 ---
 
 ### AI-Powered Resume Tailoring
 
-Stop guessing what recruiters want to see. Our **AI** analyzes job descriptions to provide you with actionable insights, helping you customize your resume with the right keywords and skills. This intelligent tailoring significantly boosts your chances of getting past automated screenings and into the hands of a hiring manager.
+Stop guessing what recruiters want to see. Our **AI** analyzes job descriptions to provide you with actionable insights, helping you customize your resume with the right keywords and skills. This intelligent tailoring helps optimize your resume for applicant tracking systems and human reviewers.
 
 ### AI Content Optimization
 
@@ -23,10 +23,10 @@ Choose from a variety of modern, **ATS-friendly templates** designed by experts.
 
 We cater to your workflow. Edit your resume using a simple, intuitive interface or write directly in **Markdown** for more control. No matter how you choose to work, our **live preview** instantly shows you the changes, so you always know exactly what your final document will look like.
 
-### Multiple Export Options
+### PDF Export
 
-When your masterpiece is ready, generate a professional **PDF** or **HTML** document with a single click. Your application-ready file is prepared instantly, without the hassle of external software or formatting issues.
+When your resume is ready, generate a professional **PDF** document with a single click. Your application-ready file is prepared instantly, without the hassle of external software or formatting issues.
 
 ### Built-in Version Control
 
-Never apply with a one-size-fits-all resume again. Our integrated **version control** system allows you to easily create, manage, and update multiple resume versions. Effortlessly tailor a unique resume for every job description and keep all your applications perfectly organized in one place.
+Create multiple versions of your resume. Our integrated **version control** system allows you to easily create, manage, and update multiple resume versions. Effortlessly tailor a unique resume for different job descriptions and keep all your applications perfectly organized in one place.
