--- a/src/app/(public)/(static)/pricing/page.mdx
+++ b/src/app/(public)/(static)/pricing/page.mdx
@@ -10,7 +10,7 @@ Get everything you need to build and manage a professional, application-ready re
 
 -   **Professional, ATS-Friendly Templates**
 -   **Effortless Editing with Live Preview**
--   **Unlimited PDF & HTML Exports**
+-   **Unlimited PDF Exports**
 -   **Built-in Version Control**
 
 ### AI Credits for Advanced Capabilities
