multi modal input

--- a/posts/welcome-to-markdowntailor.mdx
+++ b/posts/welcome-to-markdowntailor.mdx
@@ -1,8 +1,7 @@
 ---
 title: Welcome to markdowntailor
 seoTitle: Introducing markdowntailor - Transform Your Markdown Experience
-abstract: markdowntailor has arrived to revolutionize how you work with Markdown. Discover how our powerful yet intuitive tool can streamline your content creation workflow.
-isPublished: true
+description: markdowntailor has arrived to revolutionize how you write your resume. With markdowntailor, you can create, format, and version your professional resumes with unparalleled efficiency.
 publishedOn: 2025-07-1
 slug: welcome-to-markdowntailor
 ---
