--- a/posts/welcome-to-markdowntailor.mdx
+++ b/posts/welcome-to-markdowntailor.mdx
@@ -1,7 +1,7 @@
 ---
 title: Welcome to markdowntailor
-seoTitle: Introducing markdowntailor - Transform Your Markdown Experience
-description: markdowntailor has arrived to revolutionize how you write your resume. With markdowntailor, you can create, format, and version your professional resumes with unparalleled efficiency.
+seoTitle: Free Online Resume Maker - Transform Your Markdown Experience
+description: markdowntailor has arrived to revolutionize how you write your resume. With markdowntailor, you can create, format, and version your professional resumes with unparalleled efficiency with markdown and css.
 publishedOn: 2025-07-1
 slug: welcome-to-markdowntailor
 ---
